# lxdm

./: AUTHORS  INSTALL  Makefile.am  Makefile.in  README  README.md  TODO  aclocal.m4  config.h.in  configure  configure.ac  lxdm.spec.in
data/: Makefile.am  Makefile.in  PostLogout.in  Xsession  lxdm.conf.in  lxdm.in
data/themes/GalliumOS/: greeter-gtk3.ui  greeter.ui  gtk.css  gtkrc  index.theme
debian/: changelog  clean  control  copyright  lxdm.config  lxdm.init  lxdm.install  lxdm.links  lxdm.logrotate  lxdm.pam  lxdm.postinst  lxdm.postrm  lxdm.prerm  lxdm.service  rules  watch
debian/galliumos/: upstream
debian/local/: lxdm.insserv
debian/local/GalliumOS/: gtk.css
debian/manpages/: lxdm.1
debian/patches/: 15-path-replace.patch  17-follow-symlink.patch  22_ubuntu_i18n_oneiric.patch  23_debian-config.patch  27_format_security.patch  41-force-reset.patch  42-fix-user-list.patch  cros_mouse_scaling.patch  galliumos-config  galliumos-modify_greeter_style.diff  galliumos-theme.patch  galliumos-update_lxdm_conf.diff  series  soften_greeter_font_colors.diff  x11_priority.patch
debian/po/: POTFILES.in  ca.po  cs.po  da.po  de.po  el.po  es.po  eu.po  fi.po  fr.po  gl.po  it.po  ja.po  ko.po  ml.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sv.po  ta.po  templates.pot  tr.po  vi.po  zh_CN.po
debian/source/: lintian-overrides
pam/: Makefile.am  Makefile.in  lxdm
po/: LINGUAS  POTFILES.in  af.po  ar.po  bg.po  bn_IN.po  ca.po  cs.po  da.po  de.po  el.po  es.po  es_VE.po  et.po  eu.po  fa.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  lt.po  ml.po  ms.po  nb.po  nl.po  nn.po  pl.po  ps.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sr.po  (+8 more)
src/: Makefile.am  Makefile.in  auth.c  auth.h  config.c  greeter-gdk.c  greeter-utils.c  greeter-utils.h  greeter.c  lang.c  lang.h  lxcom.c  lxcom.h  lxcommon.h  lxdm.c  lxdm.h  numlock.c  pam.c  ui.c  xconn.c  xconn.h
src/gdm/: gdm-languages.c
systemd/: Makefile.am  Makefile.in
